--- a/wb_front — копия/src/app/components/sidebar-menu/sidebar-menu.component.html
+++ b/wb_front — копия/src/app/components/sidebar-menu/sidebar-menu.component.html
@@ -1,9 +1,7 @@
 <div class="sidebar">
-    <ul>
-      <li *ngFor="let cat of categories">
-        <span class="icon">{{ cat.icon }}</span>
-        <span class="label">{{ cat.label }}</span>
-      </li>
-    </ul>
-  </div>
-  
+  <ul>
+    <li *ngFor="let category of categories">
+      {{ category.name }}
+    </li>
+  </ul>
+</div>
